[package]
name = "sample"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pyo3_nullify = { path = "../" }
pyo3 = { version = "0.16.5", optional = true, features = ["extension-module"] }

[features]
python-module = ["dep:pyo3"]
default = []

[lib]
name="sample"

[profile.release]
strip = true
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
